fixing footer blocking overflow

--- a/src/scss/atoms/radio-btn.scss
+++ b/src/scss/atoms/radio-btn.scss
@@ -4,7 +4,6 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin-bottom: $spacer * 1.5;
   cursor: pointer;
   font-size: $font-sm;
   user-select: none;
